--- a/Bitacora/index.html
+++ b/Bitacora/index.html
@@ -567,14 +567,14 @@
         <hr>
 
         <!--Fecha-->
-        <p class="fecha">17/04/2023</p>
+        <p class="fecha">17/05/2023</p>
         <!--Seccion -->
         <section>
             <!--Una etiqueta div refiere a divisones entre bloques.-->
             <div class="seccion">
                 <!--Subtitulos-->
                 <h1 class="subtitulos">
-                    Bitacora: 17 de Abril, 2023
+                    Bitacora: 17 de Mayo, 2023
                 </h1>
                 <!--Parrafos con atributo class. Sirven para especificar una o más clases de un elemento.-->
                 <p class="texto"> 
@@ -589,14 +589,14 @@
         <hr>
 
         <!--Fecha-->
-        <p class="fecha">18/04/2023</p>
+        <p class="fecha">18/05/2023</p>
         <!--Seccion -->
         <section>
             <!--Una etiqueta div refiere a divisones entre bloques.-->
             <div class="seccion">
                 <!--Subtitulos-->
                 <h1 class="subtitulos">
-                    Bitacora: 18 de Abril, 2023
+                    Bitacora: 18 de Mayo, 2023
                 </h1>
                 <!--Parrafos con atributo class. Sirven para especificar una o más clases de un elemento.-->
                 <p class="texto"> 
@@ -610,14 +610,14 @@
         <hr>
 
         <!--Fecha-->
-        <p class="fecha">22/04/2023</p>
+        <p class="fecha">22/05/2023</p>
         <!--Seccion -->
         <section>
             <!--Una etiqueta div refiere a divisones entre bloques.-->
             <div class="seccion">
                 <!--Subtitulos-->
                 <h1 class="subtitulos">
-                    Bitacora: 22 de Abril, 2023
+                    Bitacora: 22 de Mayo, 2023
                 </h1>
                 <!--Parrafos con atributo class. Sirven para especificar una o más clases de un elemento.-->
                 <p class="texto"> 
@@ -632,14 +632,14 @@
         <hr>
 
         <!--Fecha-->
-        <p class="fecha">24/04/2023</p>
+        <p class="fecha">24/05/2023</p>
         <!--Seccion -->
         <section>
             <!--Una etiqueta div refiere a divisones entre bloques.-->
             <div class="seccion">
                 <!--Subtitulos-->
                 <h1 class="subtitulos">
-                    Bitacora: 24 de Abril, 2023
+                    Bitacora: 24 de Mayo, 2023
                 </h1>
                 <!--Parrafos con atributo class. Sirven para especificar una o más clases de un elemento.-->
                 <p class="texto"> 
@@ -652,14 +652,14 @@
         <hr>
 
         <!--Fecha-->
-        <p class="fecha">26/04/2023</p>
+        <p class="fecha">26/05/2023</p>
         <!--Seccion -->
         <section>
             <!--Una etiqueta div refiere a divisones entre bloques.-->
             <div class="seccion">
                 <!--Subtitulos-->
                 <h1 class="subtitulos">
-                    Bitacora: 26 de Abril, 2023
+                    Bitacora: 26 de Mayo, 2023
                 </h1>
                 <!--Parrafos con atributo class. Sirven para especificar una o más clases de un elemento.-->
                 <p class="texto"> 
